--- a/install/extras/developers/css/cerb.css/jquery/_jquery-ui.scss
+++ b/install/extras/developers/css/cerb.css/jquery/_jquery-ui.scss
@@ -104,16 +104,17 @@ UL.ui-autocomplete.ui-menu li.ui-menu-item.ui-state-focus {
 .ui-tabs .ui-tabs-nav li {
 	background: var(--cerb-color-background) linear-gradient(to bottom, var(--cerb-color-background), var(--cerb-color-background-contrast-240));
 	border-color: var(--cerb-color-background-contrast-200);
-	margin: 0.5px -0.5px 0 -0.5px;
+	margin: 0.25em -0.3em -0.3em 0;
+	float: none;
+	display: inline-block;
+	border-bottom-width: 1px;
 }
 .ui-tabs .ui-tabs-nav li a {
-	padding: 6px 8px;
 	outline: none;
+	font-weight: normal;
 }
 .ui-tabs .ui-tabs-nav li.ui-state-hover {
 	background: var(--cerb-color-background) linear-gradient(to bottom, var(--cerb-color-background), var(--cerb-color-background-contrast-200));
-	border-bottom: none;
-	z-index: 2;
 }
 .ui-tabs .ui-tabs-nav li.ui-state-default a {
 	color: var(--cerb-color-background-contrast-125);
@@ -122,19 +123,16 @@ UL.ui-autocomplete.ui-menu li.ui-menu-item.ui-state-focus {
 	color: var(--cerb-color-background-contrast-100);
 }
 .ui-tabs .ui-tabs-nav li.ui-tabs-active {
-	padding-bottom: 0;
-	background: var(--cerb-tab-active) linear-gradient(to bottom, var(--cerb-tab-active), var(--cerb-tab-active-gradient));
+	background: var(--cerb-tab-active) linear-gradient(to bottom, var(--cerb-tab-active) 0%, var(--cerb-tab-active-gradient) 50%);
 	border-color: var(--cerb-tab-active-border);
-	//border-bottom: none;
+	border-bottom: 1px solid var(--cerb-color-background);
+	padding-top: 1px;
+	margin-bottom: -4px;
 
 	a {
 		color: var(--cerb-tab-active-text);
 		font-weight: bold;
-		border-bottom: 1px solid var(--cerb-color-background);
-	}
-	
-	&.ui-tabs-state-hover {
-		border-bottom: 1px solid var(--cerb-color-background);
+		font-size: 0.95em;
 	}
 }
 
