--- a/install/extras/developers/css/cerb.css/theme/cerb-theme.scss
+++ b/install/extras/developers/css/cerb.css/theme/cerb-theme.scss
@@ -264,9 +264,9 @@ $timestamp: 2022011101;
 
   --cerb-color-widget-header: rgb(220,220,220);
   
-  --cerb-tab-active: rgb(60,60,60);
+  --cerb-tab-active: rgb(62,62,62);
   --cerb-tab-active-gradient: rgb(32,32,32);
-  --cerb-tab-active-border: rgb(50,50,50);
+  --cerb-tab-active-border: rgb(62,62,62);
   --cerb-tab-active-text: rgb(240,240,240);
 
   --cerb-callout-background: rgba(57,57,57,0.8);
